<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".WayfinderFR">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/nav_main_loading"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:animateLayoutChanges="true"
        app:layout_constraintTop_toTopOf="parent">

        <ProgressBar
            android:id="@+id/nav_main_loading_bar"
            style="@style/Widget.AppCompat.ProgressBar.Horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:indeterminate="true"
            android:indeterminateTint="?colorSecondary"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/nav_main_loading_text_fr"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/nav_main_loading_text_fr"
            android:textAlignment="center"
            android:textColor="?colorOnBackground"
            android:textSize="20sp"
            app:layout_constraintTop_toBottomOf="@id/nav_main_loading_bar" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/nav_main_nav"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:animateLayoutChanges="true"
        app:layout_constraintBottom_toTopOf="@id/nav_main_exit_fr"
        app:layout_constraintTop_toBottomOf="@id/nav_main_loading">

        <TextView
            android:id="@+id/nav_main_progress_text_fr"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/text_margin"
            android:text="@string/nav_main_progress_text_fr"
            android:textColor="?colorOnBackground"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ProgressBar
            android:id="@+id/nav_main_progress_bar"
            style="@style/Widget.AppCompat.ProgressBar.Horizontal"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/text_margin"
            android:indeterminate="false"
            android:progress="0"
            android:progressTint="?colorSecondary"
            app:layout_constraintBottom_toBottomOf="@id/nav_main_progress_text_fr"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/nav_main_progress_text_fr"
            app:layout_constraintTop_toTopOf="@id/nav_main_progress_text_fr" />

        <TextView
            android:id="@+id/nav_main_summary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/text_margin"
            android:textAlignment="center"
            android:textColor="?colorOnBackground"
            android:textSize="35sp"
            app:layout_constraintTop_toBottomOf="@id/nav_main_progress_text_fr" />

        <ImageView
            android:id="@+id/nav_main_icon"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_margin="@dimen/text_margin"
            android:contentDescription="@string/image_of_general_direction_to_move_in"
            android:maxWidth="40sp"
            android:maxHeight="40sp"
            app:layout_constraintBottom_toTopOf="@id/nav_main_label_destination"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/nav_main_summary" />

        <TextView
            android:id="@+id/nav_main_label_destination"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/text_margin"
            android:text="@string/destination"
            android:textAlignment="center"
            android:textColor="?colorOnBackground"
            android:textSize="18sp"
            app:layout_constraintBottom_toTopOf="@id/nav_main_destination" />

        <TextView
            android:id="@+id/nav_main_destination"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/text_margin"
            android:textAlignment="center"
            android:textColor="?colorOnBackground"
            android:textSize="23sp"
            app:layout_constraintBottom_toTopOf="@id/nav_main_text_fr" />

        <Button
            android:id="@+id/nav_main_text_fr"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/text_margin"
            android:text="@string/nav_main_text_fr"
            android:textColor="?colorOnBackground"
            app:icon="@drawable/ic_baseline_text_fields_24"
            app:iconTint="?colorOnBackground"
            app:layout_constraintBottom_toTopOf="@id/nav_main_tts_fr"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:rippleColor="?colorSecondary"
            app:strokeColor="?colorSecondary" />

        <Button
            android:id="@+id/nav_main_tts_fr"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/text_margin"
            android:backgroundTint="?colorSecondary"
            android:text="@string/nav_main_tts_fr"
            app:icon="@drawable/ic_baseline_volume_up_24"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <Button
        android:id="@+id/nav_main_exit_fr"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/text_margin"
        android:text="@string/nav_main_exit_fr"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>